got home , but aligning issues

--- a/src/components/countryInfo/CountryInfo.css
+++ b/src/components/countryInfo/CountryInfo.css
@@ -4,3 +4,16 @@ a:hover {
   text-decoration: none;
 }
 
+.arrow {
+  font-size: 20px;
+}
+
+.custom {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: fit-content;
+  padding: 3px;
+  border-radius: 3px;
+}
